# torch_script

ai_everywhere/: baseline.py  low_level_api_experiment.ipynb  multi_stream_module.py
ao/autoquant/: readme.md  test_autoquant.py
code_free/: test_class.py  test_code_free_ipex.py  test_hardcode_ipex_monkey_path.py  test_hardcode_ipex_monkey_path_imperative_only.py  test_hardcode_ipex_monkey_path_imperative_only_with_graph_capture_API.py  test_hardcode_ipex_monkey_path_imperative_only_with_graph_capture_API_use_instance_filter.py  test_hardcode_ipex_monkey_path_imperative_only_wrap_call.py  test_hardcode_ipex_monkey_path_imperative_only_wrap_call_graph_capture.py  test_hardcode_ipex_monkey_path_imperative_only_wrap_call_non_call_attr.py  test_hugging_face_script.py  test_ipex_imperative.py  test_ipex_jit.py
dispatch/torch_function/: test_torch_function.py
draw_fx_graph/: test_draw_fx_graph.py
dtensor/: tp_hf.py
extenstion/test_cuda_extension/: README.md  readme  setup.py
extenstion/test_ll_extension/: README.md  setup.py
extenstion/test_torch_extension/: README.md  readme.md  setup.py
extenstion/test_torch_extension_fix_py_buffer/: setup.py
fp8/: test_fp8.py
fp8/vectorized/: test_vec_operator.py  test_vec_quant_dequant.py  test_vec_to.py
fx_mixed_affinity/: main.py  test_extending_torch_function.py  test_fx.py  test_memory_leak.py  test_mixed_affinity.py  test_mixed_affinity_opentuner.py  test_mixed_affinity_tuner.py  test_symbolic_trace.py  tune.sh
inductor/bf16/: test_bf16_vec.py  test_group_norm.py  test_transpose_mxn.py
inductor/fp32/: test_add_exp.py  test_inductor_single_conv.py  test_serials_conv_add_relu.py
inductor/general/: test_109897.py  test_109897_bk.py
inductor/int8/: test_export_dynamic_shape.py  test_inductor_int8.py  test_inductor_int8_conv_relu_conv.py  test_quantize_and_decomposed_quantized.py
inductor/memory_usage/: test_memory_usage_aoti.py  test_memory_usage_verified.py  (+1 more)
kokoro/: test_kokoro.py
pytorch_cpp_example/cpp_deployment/: CMakeLists.txt  main.cpp  main.py  readme.md
pytorch_cpp_example/reproduce_omp_issue/: CMakeLists.txt  example-app.cpp  readme.md
quantization/: test_quantization.py
sglang/: test_offline.md  test_send_request.py  test_start_server.py
torch_decomp/: test_decomp.py  test_dynamo_export_decomp.py
torchdynamo_examples/: test_ipex_rn50.py  test_ipex_rn50_jit_trace.py  test_ipex_simple_net.py  test_ipex_simple_net_jit_trace.py  test_ipex_simple_net_jit_trace_if_condition.py  test_ipex_without_torchdynamo_imperative_path.py  test_ipex_without_torchdynamo_jit_path.py  test_tor_example.py
xpu_multi_stream/: test_cuda.py  test_cuda_opentuner.py
(+463 files in other folders)
